--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -556,3 +556,9 @@ body {
   display: grid;
   place-items: center;
 }*/
+.error-message {
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
+  color: red; /* Set the error message text color to red */
+  font-weight: bold;
+}
