--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -170,3 +170,10 @@ body {
     height: 100%;
     object-fit: cover;
   }
+
+  .error-message {
+    opacity:1;
+    transition: opacity 0.5s ease-in-out;
+    color: red; /* Set the error message text color to red */
+    font-weight: bold;
+  }
