modified:   src/main/resources/templates/createEventForm.html

--- a/src/main/resources/templates/createEventForm.html
+++ b/src/main/resources/templates/createEventForm.html
@@ -46,8 +46,8 @@
                     <input type="text" id="type" name="type" ><br><br>
                 </div>
 
-                <div> <label for="type">Event Image</label>
-                    <input type="file" name="image" accept="image/*" class="form-control-file"><br><br>
+                <div> <label for="image">Event Image</label>
+                    <input type="file" name="image" id="image" accept="image/*" class="form-control-file"><br><br>
                 </div><br><br>
 
                 <div class="formdt">
