--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" th:href="@{css/dashboard.css}">
     <link rel="stylesheet" th:href="@{css/navStyle.css}">
     <link rel="stylesheet" th:href="@{css/styles.css}">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
+
 </head>
 
 <body>
@@ -78,12 +80,13 @@
                                     style="scale: 1.45; margin-right: 10px; margin-top: 2px;"></a>
                             <a href="#" id="displayFormBtn" class="btn">Create an Event</a>
                             <a href="#" id="displayFormBtnTask" class="btn">Go to Task</a>
+                            <button id="downloadBtn" class="btn" style="border: none; cursor: pointer;">PDF Downlaod</button>
 
 
                         </div>
                     </div>
 
-                    <table>
+                    <table id="myTable">
                         <thead>
                             <tr>
                                 <td>Name</td>
@@ -246,6 +249,22 @@
     <!-- ====== ionicons ======= -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script>
+        var opt = {
+            margin: 1 ,
+            filename: 'PDF' ,
+            image: {type: 'jpeg',quality:0.98} ,
+            html2canvas :{scale : 2},
+            jsPDF :{unit:'in',format:'letter',orientation:'portrait'}
+
+        }
+        window.onload=function(){
+            document.getElementById("downloadBtn").addEventListener("click",()=>{
+                const invoice = this.document.getElementById("myTable");
+                html2pdf().from(myTable).set(opt).save();
+            })
+        }
+        </script>
 </body>
 
 </html>
