--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -252,7 +252,7 @@
     <script>
         var opt = {
             margin: 1 ,
-            filename: 'PDF' ,
+            filename: 'Event PDF' ,
             image: {type: 'jpeg',quality:0.98} ,
             html2canvas :{scale : 2},
             jsPDF :{unit:'in',format:'letter',orientation:'portrait'}
