--- a/src/main/resources/templates/Contact.html
+++ b/src/main/resources/templates/Contact.html
@@ -3,7 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>CONTACTS</title>
 <link rel="stylesheet" th:href="@{css/dashboard.css}">
 <link rel="stylesheet" th:href="@{css/navStyle.css}">
 <link rel="stylesheet" th:href="@{css/styles.css}">
