modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/eventRestController.java 	new file:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/taskController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/taskRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/dto/EventDto.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/dto/TaskDto.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/event.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/task.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/services/EventService.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/services/EventServiceImpl.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/services/TaskServiceImpl.java 	modified:   src/main/resources/static/css/eventTab.css 	deleted:    src/main/resources/static/js/fetchData.js 	modified:   src/main/resources/static/js/lists.js 	new file:   src/main/resources/static/manager-images/14e92076d89141df8412f27df97ea3a9.jpg 	new file:   src/main/resources/static/manager-images/946805.jpg 	modified:   src/main/resources/templates/eventTab.html 	modified:   src/main/resources/templates/task.html

--- a/src/main/resources/static/css/eventTab.css
+++ b/src/main/resources/static/css/eventTab.css
@@ -172,3 +172,14 @@ nav[aria-label="breadcrumb"] {
 .breadcrumb-item.active {
     color: #6c757d;
 }
+.progress-bar {
+    width: 100%;
+    background-color: #f3f3f3;
+    border-radius: 25px;
+}
+.progress-bar-fill {
+    height: 30px;
+    background-color: #4c63af;
+    border-radius: 25px;
+    transition: width 1s;
+}
