--- a/src/main/resources/templates/eventTab.html
+++ b/src/main/resources/templates/eventTab.html
@@ -72,6 +72,9 @@
             <div class="eventTitle"></div>
             <div class="eventDescription"></div>
             <button type="button">view sheet</button>
+            <div class="progress-bar">
+                <div class="progress-bar-fill" ></div>
+            </div>
         </aside>
     </div>
     <div id="overlay" class="overlay"  th:replace="~{createEventForm :: createEventForm}">
