modified:   src/main/resources/static/js/searchbar.js 	modified:   src/main/resources/templates/Lists.html

--- a/src/main/resources/templates/Lists.html
+++ b/src/main/resources/templates/Lists.html
@@ -36,7 +36,7 @@
             <tr th:text="${hey}"></tr>
         </tbody>
     </table>
-    <table class="tabTable" th:fragment="taskList" id="dataTable">
+    <table class="tabTable" th:fragment="taskList">
         <thead class="tablehead">
             <tr>
                 <th></th>
@@ -60,7 +60,7 @@
         </tbody>
     </table>
 
-    <table class="tabTable" th:fragment="venueList" id="dataTable">
+    <table class="tabTable" th:fragment="venueList">
         <thead class="tablehead">
             <tr>
                 <th></th>
