modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/configurations/SecurityConfig.java 	new file:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/userRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/dto/DayPilotEventDto.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/dto/UserDto.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/User.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/event.java 	modified:   src/main/resources/static/css/eventTab.css 	new file:   src/main/resources/static/css/schedule.css 	new file:   src/main/resources/static/images/endDate.svg 	new file:   src/main/resources/static/images/startDate.svg 	modified:   src/main/resources/static/js/eventTab.js 	modified:   src/main/resources/static/js/lists.js 	modified:   src/main/resources/static/js/schedule.js 	new file:   src/main/resources/static/manager-images/17794.jpg 	new file:   src/main/resources/static/manager-images/2150980242.jpg 	deleted:    src/main/resources/static/manager-images/cooleffect.PNG 	deleted:    src/main/resources/static/manager-images/cute-couple-staying-kitchen.jpg 	new file:   src/main/resources/static/manager-images/defaultImage.svg 	new file:   src/main/resources/static/manager-images/defaultProfile.svg 	deleted:    src/main/resources/static/manager-images/login.PNG 	new file:   src/main/resources/static/manager-images/profile.jpg 	deleted:    src/main/resources/static/manager-images/sfsd.jpg 	modified:   src/main/resources/templates/Lists.html 	modified:   src/main/resources/templates/editCon.html 	modified:   src/main/resources/templates/eventTab.html 	modified:   src/main/resources/templates/schedule.html 	modified:   src/main/resources/templates/topBar.html

--- a/src/main/resources/templates/eventTab.html
+++ b/src/main/resources/templates/eventTab.html
@@ -36,9 +36,13 @@
                     <table th:replace="~{Lists :: venueList}"></table>
 
                     <div class="pagination">
-                        <button type="button" class="page" id="previous"><</button>
-                        <span class="pageNumber"></span>
-                        <button type="button" class="page" id="next">></button>
+                        <div type="button" class="page" id="previous"><ion-icon name="chevron-back-outline"></ion-icon></div>
+                        <span class="pageNumber">
+                            <input type="text" title="currentPageNumber" name="currentPN" id="currentPN">
+                            /
+                            <span class="totalPN"></span>
+                        </span>
+                        <div type="button" class="page" id="next"><ion-icon name="chevron-forward-outline"></ion-icon></div>
                     </div>
                 </div>
             </main>
@@ -46,15 +50,32 @@
         <aside class="info">
             <div class="Details">
                 <div class="userImg">
-                    <img th:src="@{/manager-images/login.PNG}" alt="">
+                    <img th:src="@{/manager-images/profile.jpg}" alt="">
                 </div>
-                <span>Welcome, </span>
-                <span class="username" th:text="${user.fullname}"></span> 
+                <div>
+                    <span class="username">Welcome, </span>
+                    <span class="username" th:text="${user.fullname}"></span>
+                </div> 
             </div>
-            <div class="eventImage" th:replace="~{Lists :: eventImage}"></div>
-            <div class="eventTitle"></div>
-            <div class="eventDescription"></div>
-            <button type="button">view sheet</button>
+            <div class="eventDetails">
+                <div class="eventTitle"></div>
+                <div class="eventImage" th:replace="~{Lists :: eventImage}"></div>
+                <div class="eventStartDate">
+                    <span class="DateTitle">Date: </span>
+                    <span class="startDate"></span>
+                </div>
+                <div class="eventEndDate">
+                    <span class="DateTitle">End Date: </span>
+                    <span class="endDate"></span>
+                </div>
+                <div class="eventVenue">
+                    <span class="venueTitle">Venue: </span>
+                    <span class="venue"></span>
+                </div>
+                <p class="descriptionTitle">Description</p>
+                <div class="eventDescription"></div>
+            </div>
+            <button type="button" class="btn myprimarybtn">view sheet</button>
         </aside>
     </div>
     <div id="overlay" class="overlay"  th:replace="~{createEventForm :: createEventForm}">
