--- a/src/main/resources/static/css/eventTab.css
+++ b/src/main/resources/static/css/eventTab.css
@@ -5,6 +5,12 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
   }
+ body{
+    padding: 0!important;
+    background-color: #ffffff!important;
+    opacity: 1;
+    transition: opacity 0.5s;     
+ } 
 a{
     text-decoration: none;
 }
@@ -85,7 +91,7 @@ aside{
     position: absolute;
     width: 400px;
     height: 100vh;
-    background: var(--white);
+    background: #e3d9e836;
     box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
     right: 0;
 }
@@ -95,24 +101,110 @@ aside{
     display: flex;
     align-items: center;
     flex-direction: column;
-    padding: 10px;
+    padding: 20px;
+    gap: 50px;
 }
+.Details{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    gap: 10px;
 
+    .username{
+        font-weight: bold;
+    }
+}
 .userImg{
     width: 60px;
     height: 60px;
     border-radius: 50%;
     overflow: hidden;
     img {
+        position: relative;
         width: 100%;
         height: 100%;
         object-fit: cover;
       }
 }
 
-.eventImage{
-    max-width: 400px;
+.info .eventImage{
+    max-height: 300px;
+    height: 300px;
+
+    img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 10px;
+    }
+
 }
+
+.eventDetails{
+    overflow-x: hidden; /* Hide horizontal scrollbar */
+    overflow-y: auto; /* Add vertical scrollbar */
+    width: 100%;
+    padding: 0 10px;
+    /* Customizes the whole scrollbar */
+    /*For firefox*/
+    /* scrollbar-width: thin; 
+
+    scrollbar-color: #555; */
+}
+
+
+::-webkit-scrollbar {
+    width: 7px; /* width of the entire scrollbar */
+}
+
+/* Customizes the track (progress bar) */
+::-webkit-scrollbar-track {
+    background: transparent; /* color of the tracking area */
+}
+
+/* Customizes the handle (scrollable thumb) */
+::-webkit-scrollbar-thumb {
+    background: #9d6ca5; /* color of the scroll thumb */
+    border-radius: 6px; /* roundness of the scroll thumb */
+}
+
+/* Handle on hover or active */
+::-webkit-scrollbar-thumb:hover {
+    background: #97649f; /* color when hovered over */
+}
+
+.eventTitle, .eventImage{
+    width: 100%;
+}
+.eventTitle{
+    font-size: 25px;
+    font-weight: bold;
+    color: var(--blue);
+    margin: 0 0 20px 0;
+}
+
+.eventDescription{
+    height: 200px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    margin: auto;
+}
+.descriptionTitle{
+    font-size: 20px;
+    font-weight: bold;
+    color: var(--blue);
+    margin: 20px 0 15px 0;
+}
+.DateTitle{
+    font-weight: bold;
+}
+.eventStartDate, .eventEndDate{
+    margin: 20px 0 20px 0;
+    padding-bottom: 5px;
+    border-bottom: 1px solid var(--blue);
+}
+
 .myprimarybtn{
     background-color: var(--blue);
     color: var(--white);
@@ -128,5 +220,31 @@ aside{
 .pagination{
     position: absolute;
     bottom: 50px;
-    left: 45%;
+    left: 32%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.page{
+    transition: all 0.3s ease-in-out;
+    height: 40px;
+    width: 40px;
+    background-color: transparent;
+    border: 2px solid var(--blue);
+    color: var(--blue);
+    font-size: 20px;
+    font-weight: 700;
+    border-radius: 50%;
+    margin: 0 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.page:hover{
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+    background-color: var(--blue);
+    color: var(--white);
 }
