--- a/src/main/resources/templates/Lists.html
+++ b/src/main/resources/templates/Lists.html
@@ -20,18 +20,7 @@
             </tr>
         </thead>
         <tbody class="table-group-divider">
-            <tr class="table-primary" th:each="event : ${eventList}" th:classappend="${event.id==1} ? selected">
-                <td scope="row" class="check">
-                    <label for="row-1"></label>
-                    <input type="radio" name="row-1" id="row-1" title="selectRow" th:checked= "${event.id==1} ? true">
-                </td>
-                <td th:text="${event.getName()}" ></td>
-            <!--    <td th:text="${event.getType()}"></td>-->
-                <td th:text="${event.getEventVenue().getName()}"></td>
-                <td th:text="${event.getStatus()}"></td>
-                <td th:text="${event.getStartDate()}"></td>
-                <td th:text="${event.getName()}"></td>
-                <td th:text="${event.getDateModified()}"></td>
+            <tr class="table-primary">   
             </tr>
         </tbody>
     </table>
@@ -46,15 +35,7 @@
             </tr>
         </thead>
         <tbody class="table-group-divider">
-            <tr class="table-primary" th:each="task : ${taskList}">
-                <td scope="row" class="check">
-                    <label for="row-1"></label>
-                    <input type="radio" name="row-1" id="row-1" title="selectRow">
-                </td>
-                <td th:text="${task.title}"></td>
-                <td th:text="${task.status}"></td>
-                <td th:text="${task.status}"></td>
-                <td th:text="${task.deadline}"></td>
+            <tr class="table-primary">
             </tr>
         </tbody>
     </table>
@@ -74,21 +55,7 @@
             </tr>
         </thead>
         <tbody class="table-group-divider">
-            <tr class="table-primary" th:each="venue : ${venueList}">
-                <td scope="row" class="check">
-                    <label for="row-1"></label>
-                    <input type="radio" name="row-1" id="row-1" title="selectRow">
-                </td>
-                <td th:text="${venue.getName()}"></td>
-                <td th:text="${venue.getCountry()}"></td>
-                <td th:text="${venue.getCity()}"></td>
-                <td th:text="${venue.getAddress()}"></td>
-                <td th:text="${venue.getLongitude()}"></td>
-                <td th:text="${venue.getLatitude()}"></td>                
-
-
-                <td><a th:href="@{'/edit/' + ${venue.id}}">Edit</a></td>
-                <td><a th:href="@{'/delete/' + ${venue.id}}">Delete</a></td>
+            <tr class="table-primary">
             </tr>
         </tbody>
     </table>
