--- a/src/main/resources/templates/topBar.html
+++ b/src/main/resources/templates/topBar.html
@@ -12,7 +12,7 @@
     <div class="userDetails">
         <span class="username" th:text="${user.fullname}"></span>
         <div class="user">
-            <img src="manager-images/sfsd.jpg" alt="">
+            <img src="/manager-images/profile.jpg"  alt="">
         </div>
     </div>
 </div>
