modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/budgetRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/expenseRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/taskRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/dto/BudgetDto.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/dto/ExpenseDto.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/budget.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/expense.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/services/BudgetServiceImpl.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/services/ExpenseServiceImpl.java 	new file:   src/main/resources/templates/Budget.html 	modified:   src/main/resources/templates/navigation.html

--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -54,7 +54,7 @@
                 </li>
 
                 <li>
-                    <a href="#">
+                    <a th:href="@{/budget}">
                         <span class="icon">
                             <ion-icon name="cash-outline"></ion-icon>
                         </span>
